Fixed issue with light/dark toggle & improved mobile spacing

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -178,3 +178,53 @@
     font-size: 30px;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .name-header {
+    font-size: 30px;
+  }
+
+  .outer-link-container {
+    flex-direction: column;
+  }
+
+  .link-container {
+    margin-top: 8px;
+  }
+}
+
+@media only screen and (max-width: 405px) {
+  .name-header {
+    font-size: 25px;
+  }
+
+  .job-subtitle {
+    font-size: 13px;
+  }
+
+  .description {
+    max-width: 100%;
+    font-size: 11px;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .name-header {
+    font-size: 22px;
+  }
+
+  .job-subtitle {
+    font-size: 11px;
+  }
+
+  .description {
+    max-width: 100%;
+    font-size: 10px;
+  }
+}
+
+@media only screen and (max-width: 345px) {
+  .name-header {
+    font-size: 17px;
+  }
+}
